--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -153,11 +153,10 @@
 		}
 	}
 	.breadcrumb {
-		// display: none;
 		position: absolute;
-		// z-index: -1;
 		top: 0;
 		left: 0;
+		padding-bottom: 0;
 		width: 100%;
 		background-color: #fff;
 		&-wrap{
