--- a/sass/general/_variables.scss
+++ b/sass/general/_variables.scss
@@ -13,7 +13,9 @@ $tooltip-bg:             #797c82;
 $tooltip-arrow-color:    $tooltip-bg;
 
 $error-color:            #FF4F4F;
-$valid-color:            #ffffff;
+$valid-color:            #39b54a;
+
+$succes-color:					 #39b54a;
 
 // Текст
 $text-color: $basic-color;
