--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@
 @import 'bootstrap/_tooltip.scss';
 @import 'bootstrap/_dropdown.scss';
 @import 'bootstrap/_transitions.scss';
+@import 'bootstrap/_nav.scss';
 
 // deafult style ------------------------
 @import 'general/_deafult.scss';
@@ -38,4 +39,5 @@
 @import '_content.scss';
 @import '_cards.scss';
 @import '_calendar.scss';
+@import '_vidgets.scss';
 
