--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,113 @@ tbody.collapse.show {
   transition: height 0.35s ease;
 }
 
+.nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.nav-link {
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  text-decoration: none;
+}
+
+.nav-link.disabled {
+  color: #6c757d;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #dee2e6;
+}
+
+.nav-tabs .nav-item {
+  margin-bottom: -1px;
+}
+
+.nav-tabs .nav-link {
+  border: 1px solid transparent;
+  -webkit-border-top-left-radius: 0.25rem;
+          border-top-left-radius: 0.25rem;
+  -webkit-border-top-right-radius: 0.25rem;
+          border-top-right-radius: 0.25rem;
+}
+
+.nav-tabs .nav-link:hover,
+.nav-tabs .nav-link:focus {
+  border-color: #e9ecef #e9ecef #dee2e6;
+}
+
+.nav-tabs .nav-link.disabled {
+  color: #6c757d;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: #495057;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff;
+}
+
+.nav-tabs .dropdown-menu {
+  margin-top: -1px;
+  -webkit-border-top-left-radius: 0;
+          border-top-left-radius: 0;
+  -webkit-border-top-right-radius: 0;
+          border-top-right-radius: 0;
+}
+
+.nav-pills .nav-link {
+  -webkit-border-radius: 0.25rem;
+          border-radius: 0.25rem;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: #007bff;
+}
+
+.nav-fill .nav-item {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  text-align: center;
+}
+
+.nav-justified .nav-item {
+  -webkit-flex-basis: 0;
+      -ms-flex-preferred-size: 0;
+          flex-basis: 0;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+}
+
+.tab-content > .tab-pane {
+  display: none;
+}
+
+.tab-content > .active {
+  display: block;
+}
+
 a:hover,
 a:focus,
 a:active,
@@ -1196,7 +1303,7 @@ h2 span,
 }
 
 .label-valid {
-  color: #ffffff;
+  color: #39b54a;
 }
 
 .header.scroll {
@@ -2740,6 +2847,192 @@ h2 span,
   margin-right: auto;
   display: block;
   margin-top: 40px;
+}
+
+.vidget-box {
+  margin-bottom: 15px;
+  background-color: #fbfbfb;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+}
+
+.vidget-items {
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.vidget-item {
+  position: relative;
+  z-index: 1;
+  -webkit-flex-shrink: 1;
+      -ms-flex-negative: 1;
+          flex-shrink: 1;
+  padding: 5px 10px;
+  margin-right: -10px;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #bcbdc0;
+  font-size: 12px;
+  font-weight: 300;
+  -webkit-border-radius: 5px 5px 0 0;
+          border-radius: 5px 5px 0 0;
+  border: 1px solid #dddee0;
+  background-color: #fbfbfb;
+}
+
+.vidget-item:first-child {
+  z-index: 2;
+}
+
+.vidget-item:first-child.active {
+  margin-right: -10px;
+}
+
+.vidget-item:not(:last-child),
+.vidget-item:not(:first-child) {
+  z-index: 3;
+}
+
+.vidget-item:last-child {
+  z-index: 1;
+  margin-left: -10px;
+  margin-right: 0;
+  text-align: right;
+  direction: rtl;
+}
+
+.vidget-item:last-child.active {
+  text-align: left;
+  direction: ltr;
+}
+
+.vidget-item.active {
+  z-index: 10;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  margin-right: 0;
+  margin-left: 0;
+  background-color: #f4f5f5;
+  border-bottom-color: transparent;
+}
+
+.vidget-imgbox {
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  overflow: hidden;
+}
+
+.vidget-content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 15px;
+  background-color: #f4f5f5;
+  -webkit-border-radius: 0 0 5px 5px;
+          border-radius: 0 0 5px 5px;
+  border: 1px solid #dddee0;
+  border-top: none;
+}
+
+.vidget-content_bdtop {
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border-top: 1px solid #dddee0;
+}
+
+.vidget-content_dblock {
+  display: block;
+}
+
+.vidget-content__left {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-right: 10px;
+}
+
+.vidget-content__right {
+  max-width: 114px;
+  text-align: right;
+}
+
+.vidget-footer {
+  margin-top: auto;
+}
+
+.vidget-title {
+  color: #797c82;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+}
+
+.vidget-link {
+  color: #797c82;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+}
+
+.vidget-group {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: -5px;
+  margin-right: -10px;
+  margin-top: 20px;
+}
+
+.vidget-group_special {
+  margin-top: 5px;
+  margin-bottom: -15px;
+}
+
+.vidget-text_small {
+  color: #9a9da1;
+  font-size: 11px;
+  line-height: 13.2px;
+  font-weight: 400;
+}
+
+.vidget-text_count {
+  color: #32363f;
+  font-size: 37px;
+  font-weight: 300;
+}
+
+.vidget-text.danger {
+  color: #ee3124;
+}
+
+.vidget-text.succes {
+  color: #39b54a;
 }
 
 @media screen and (min-width: 1024px) {
