--- a/sass/_calendar.scss
+++ b/sass/_calendar.scss
@@ -1,13 +1,33 @@
 .calendar {
-	width: 220px;
-	padding: 10px;
+	padding: 15px;
 	margin-top: 25px;
 	border-radius: 5px;
 	background-color: #f4f5f5;
-	// transform: translateX(-36%);
 	&-change {
 		height: 20px;
 		background-color: red;
+	}
+	&.vidget-box {
+		width: auto;
+		border: 1px solid #dddee0;
+		background-color: #f4f5f5;
+		.ui-state-active {
+			background-color: transparent;
+		}
+		.ui-datepicker {
+			display: block;
+		}
+	}
+	.ui-datepicker {
+		width: 100%;
+	}
+	table {
+		font-size: 14px;
+	}
+	.ui-datepicker-title {
+		color: $dark-color;
+		font-size: 13px;
+		font-weight: 400;
 	}
 	.ui-datepicker-prev, .ui-datepicker-next {
 		@include before('\e901') {
@@ -18,7 +38,7 @@
 			width: 12px;
 			height: 12px;
 			@include icon;
-			font-size: 12px;			
+			font-size: 10px;			
 		}
 	}
 	.ui-datepicker-prev {
@@ -31,17 +51,38 @@
 			transform: rotate(-90deg);
 		}
 	}
-	.ui-datepicker-today {
-		border: 1px solid $special-color;
-		.ui-state-highlight .ui-state-hover {
-			background-color: transparent;
+	.ui-datepicker-calendar {
+		td {
+			padding: 2.5px;
 		}
 	}
+
+	.ui-datepicker-today {
+		.ui-state-default {
+			border: 1px solid $special-color;
+			color: $special-color;
+		}
+	}
+	.ui-state-default {
+		text-align: center;
+		border: 1px solid #d0d1d3;
+		color: #bcbdc0;
+		font-size: 16px;
+		@include hover {
+			background-color: $btn-hov-bg-color;
+			color: $light-color;
+		}
+	}
+	.ui-state-week {
+		color: #bcbdc0;
+		font-size: 10px;
+		font-weight: 300;
+	}
 	.ui-state-active {
-		background-color: $btn-hov-bg-color;
+		border: 1px solid #32363f;
 	}
 	.ui-state-hover {
-		background-color: $btn-hov-bg-color;
+
 	}
 	.ui-datepicker-buttonpane {
 		margin: 0;
@@ -71,5 +112,38 @@
 		margin-right: auto;
 		display: block;
 		margin-top: 40px;
+	}
+}
+.events {
+	display: none;	
+}
+.event {
+	display: none;
+	&-nav {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	&-title {
+		margin-bottom: 10px;
+		font-family: "PT Serif";
+		color: $basic-color;
+		font-size: 18px;
+		line-height: 18px;
+		font-weight: 400;
+	}
+	&-control {
+		position: absolute;
+		right: 0;
+		top: 0;
+		display: none;
+		color: #E0E1E2;
+		transform: rotate(90deg);
+		i {
+			color: inherit;
+			&:before {
+				color: inherit;
+			}
+		}
 	}
 }
