--- a/sass/_vidgets.scss
+++ b/sass/_vidgets.scss
@@ -1,7 +1,8 @@
 .vidget {
 	&-box {
 		margin-bottom: 15px;
-		background-color: #fbfbfb;
+		margin-top: 0;
+
 		border-radius: 5px;
 	}
 	&-items {
@@ -25,8 +26,10 @@
 
 		&:first-child {
 			z-index: 2;
-			&.active {
+			&.active, &:hover{
 				margin-right: -10px;
+				min-width: 103px;
+				text-align: center;
 			}
 		}
 		&:not(:last-child), &:not(:first-child ) {
@@ -38,26 +41,68 @@
 			margin-right: 0;
 			text-align: right;
 			direction: rtl;
-			&.active {
+			&.active, &.active:hover {
 				text-align: left;
 				direction: ltr;
 			}
 		}
-		&.active {
+		&.active, &:hover {
 			z-index: 10;
 			flex-shrink: 0;
 			margin-right: 0;
 			margin-left: 0;
+			color: $basic-color;
+			font-size: 12px;
+			font-weight: 400;
 			background-color: #f4f5f5;
 			border-bottom-color: transparent;
+		}
+		&_fixfirsttab {
+			&:first-child {
+				&.active, &:hover {
+					margin-right: 0;
+				}
+			}
 		}
 	}
 	&-tabs {
 
 	}
 	&-imgbox {
-		border-radius: 5px;
+		position: relative;
 		overflow: hidden;
+		min-height: 125px;
+		img {
+
+		}
+		&_full {
+			margin-bottom: 10px;
+		}
+		&__text {
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			z-index: 10;
+			width: 100%;
+			min-height: 60px;
+			padding: 25px 15px 15px;
+			font-size: 16px;
+			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+			h3 {
+				margin-bottom: 3px;
+				font-family: "Roboto", sans-serif;
+				color: $light-color;
+				font-size: 1.125em;
+				font-weight: 400;
+
+			}
+
+			p {
+				color: #bcbdc0;
+				font-size: 1em;
+				font-weight: 400;
+			}
+		}
 	}
 	&-content {
 		display: flex;
@@ -77,7 +122,6 @@
 			display: flex;
 			flex-grow: 1;
 			flex-direction: column;
-			// height: 100%;
 			padding-right: 10px;
 		}
 		&__right {
@@ -89,10 +133,20 @@
 		margin-top: auto;
 	}
 	&-title {
+		position: relative;
+		margin-bottom: 10px;
 		color: $dark-color;
 		font-size: 14px;
 		line-height: 17px;
 		font-weight: 300;
+	}
+	&-subtitle {
+		position: relative;
+		margin-top: 7px;
+		margin-bottom: 15px;
+		color: $dark-color;
+		font-size: 13px;
+		font-weight: 400;
 	}
 	&-link {
 		color: $dark-color;
@@ -113,6 +167,16 @@
 		}
 	}
 	&-text {
+		color: $dark-color;
+		font-size: 12px;
+		font-weight: 400;
+		// line-height: 14px;
+		p {
+			margin-bottom: 2px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 		&_small {
 			color: #9a9da1;
 			font-size: 11px;
@@ -123,6 +187,10 @@
 			color: #32363f;
 			font-size: 37px;
 			font-weight: 300;
+		}
+		&_big {
+			font-size: 18px;
+			font-weight: 400;
 		}
 		&.danger {
 		  color: $special-color;
