--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,8 @@
 @import '_menu-horizontal.scss';
 @import '_content.scss';
 @import '_cards.scss';
-@import '_calendar.scss';
+@import '_vidget-calendar.scss';
 @import '_vidgets.scss';
+@import '_calendar.scss';
+@import '_article.scss';
 
