--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,17 @@ h6,
   font-weight: 400;
 }
 
+.sign-title {
+  padding: 3px 10px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #dddee0;
+  color: #000000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 p,
 .section-text,
 .text {
@@ -2074,9 +2085,14 @@ h2 span,
   position: absolute;
   width: -webkit-calc(100% - 30px);
   width: calc(100% - 30px);
+  padding-bottom: 15px;
   z-index: 10;
   -webkit-border-radius: 5px;
           border-radius: 5px;
+  background-color: #fff;
+}
+
+.menu-left-wrap {
   background-color: #f4f5f5;
 }
 
@@ -2399,6 +2415,35 @@ h2 span,
   font-size: 32px;
 }
 
+.content-subtitle {
+  float: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.content-subtitle_right {
+  float: right;
+  text-align: right;
+}
+
+.content-subtitle h2 {
+  font-family: Roboto;
+  font-size: 1.125em;
+  font-weight: inherit;
+}
+
+.content-subtitle h3 {
+  font-family: Roboto;
+  font-size: 1em;
+  font-weight: inherit;
+}
+
+.content-subtitle span {
+  color: #bcbdc0;
+}
+
 .content-filter {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2542,6 +2587,12 @@ h2 span,
   margin-bottom: 30px;
 }
 
+.card::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
 .card-wrap {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2618,6 +2669,14 @@ h2 span,
   font-size: 1em;
 }
 
+.card__title a {
+  display: block;
+  max-height: 38px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+}
+
 .card-date {
   margin-top: auto;
   color: #a1a3a7;
@@ -2650,6 +2709,10 @@ h2 span,
   font-size: 40px;
   margin-top: -15px;
   margin-bottom: 5px;
+}
+
+.cardFull__title a {
+  max-height: none;
 }
 
 .cardFull__text {
@@ -2754,7 +2817,7 @@ h2 span,
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
-.calendar {
+.vidget-calendar {
   padding: 15px;
   margin-top: 25px;
   -webkit-border-radius: 5px;
@@ -2762,41 +2825,36 @@ h2 span,
   background-color: #f4f5f5;
 }
 
-.calendar-change {
-  height: 20px;
-  background-color: red;
-}
-
-.calendar.vidget-box {
+.vidget-calendar.vidget-box {
   width: auto;
   border: 1px solid #dddee0;
   background-color: #f4f5f5;
 }
 
-.calendar.vidget-box .ui-state-active {
+.vidget-calendar.vidget-box .ui-state-active {
   background-color: transparent;
 }
 
-.calendar.vidget-box .ui-datepicker {
+.vidget-calendar.vidget-box .ui-datepicker {
   display: block;
 }
 
-.calendar .ui-datepicker {
+.vidget-calendar .ui-datepicker {
   width: 100%;
 }
 
-.calendar table {
+.vidget-calendar table {
   font-size: 14px;
 }
 
-.calendar .ui-datepicker-title {
+.vidget-calendar .ui-datepicker-title {
   color: #797c82;
   font-size: 13px;
   font-weight: 400;
 }
 
-.calendar .ui-datepicker-prev:before,
-.calendar .ui-datepicker-next:before {
+.vidget-calendar .ui-datepicker-prev:before,
+.vidget-calendar .ui-datepicker-next:before {
   content: "";
   position: absolute;
   display: block;
@@ -2819,49 +2877,49 @@ h2 span,
   font-size: 10px;
 }
 
-.calendar .ui-datepicker-prev:before {
+.vidget-calendar .ui-datepicker-prev:before {
   -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
           transform: rotate(90deg);
 }
 
-.calendar .ui-datepicker-next:before {
+.vidget-calendar .ui-datepicker-next:before {
   -webkit-transform: rotate(-90deg);
       -ms-transform: rotate(-90deg);
           transform: rotate(-90deg);
 }
 
-.calendar .ui-datepicker-calendar td {
+.vidget-calendar .ui-datepicker-calendar td {
   padding: 2.5px;
 }
 
-.calendar .ui-datepicker-today .ui-state-default {
+.vidget-calendar .ui-datepicker-today .ui-state-default {
   border: 1px solid #ee3124;
   color: #ee3124;
 }
 
-.calendar .ui-state-default {
+.vidget-calendar .ui-state-default {
   text-align: center;
   border: 1px solid #d0d1d3;
   color: #bcbdc0;
   font-size: 16px;
 }
 
-.calendar .ui-state-week {
+.vidget-calendar .ui-state-week {
   color: #bcbdc0;
   font-size: 10px;
   font-weight: 300;
 }
 
-.calendar .ui-state-active {
+.vidget-calendar .ui-state-active {
   border: 1px solid #32363f;
 }
 
-.calendar .ui-datepicker-buttonpane {
+.vidget-calendar .ui-datepicker-buttonpane {
   margin: 0;
 }
 
-.calendar .ui-datepicker-buttonpane button {
+.vidget-calendar .ui-datepicker-buttonpane button {
   margin: 0;
   padding: 3px 5px 4px 5px;
   min-width: 86px;
@@ -2879,7 +2937,7 @@ h2 span,
   transition: 0.5s;
 }
 
-.calendar .form-filters__select {
+.vidget-calendar .form-filters__select {
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -3076,6 +3134,10 @@ h2 span,
   display: block;
 }
 
+.vidget-content_ads {
+  min-height: 315px;
+}
+
 .vidget-content__left {
   display: -webkit-box;
   display: -webkit-flex;
@@ -3164,6 +3226,12 @@ h2 span,
   margin-bottom: 0;
 }
 
+.vidget-text h4 {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
 .vidget-text_small {
   color: #9a9da1;
   font-size: 11px;
@@ -3188,6 +3256,263 @@ h2 span,
 
 .vidget-text.succes {
   color: #39b54a;
+}
+
+.calendar {
+  display: block;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0px;
+}
+
+.calendar thead {
+  display: block;
+}
+
+.calendar thead tr {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.calendar thead tr th {
+  margin-bottom: 5px;
+  display: block;
+  width: -webkit-calc(100% / 7);
+  width: calc(100% / 7);
+  color: #797c82;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  text-align: right;
+}
+
+.calendar tbody {
+  display: block;
+  border: 1px solid #bcbdc0;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  overflow: hidden;
+}
+
+.calendar tbody tr {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid #bcbdc0;
+}
+
+.calendar tbody tr:last-child {
+  border-bottom: 0;
+}
+
+.calendar__day {
+  display: block;
+  width: -webkit-calc(100% / 7);
+  width: calc(100% / 7);
+  min-height: 124px;
+  padding: 11px 9px;
+  color: #bcbdc0;
+  font-size: 49px;
+  font-weight: 300;
+  text-align: right;
+  border-right: 1px solid #bcbdc0;
+  color: #797c82;
+}
+
+.calendar__day:last-child {
+  border-right: 0;
+}
+
+.calendar__day a,
+.calendar__day div {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  color: inherit;
+}
+
+.calendar__day a p,
+.calendar__day div p {
+  font-weight: 700;
+  color: inherit;
+}
+
+.calendar__day a span,
+.calendar__day div span {
+  font-size: 12px;
+  font-weight: 300;
+  color: inherit;
+}
+
+.calendar__day_special {
+  background-color: rgba(0, 185, 31, 0.1);
+}
+
+.calendar__day_major {
+  color: #ee3124;
+}
+
+.calendar__today {
+  background-color: rgba(238, 49, 36, 0.1);
+}
+
+.calendar__today div p {
+  color: #a1a3a7;
+}
+
+.calendar__weekend {
+  background-color: #f4f5f5;
+}
+
+.calendar__caption {
+  display: block;
+  margin-top: auto;
+  text-align: left;
+  vertical-align: bottom;
+  color: #bcbdc0;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.article {
+  position: relative;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.article:after {
+  content: "";
+  position: absolute;
+  display: block;
+  bottom: 0;
+  right: 15px;
+  left: 15px;
+  height: 1px;
+  background-color: #707070;
+  opacity: 0.4;
+}
+
+.article:last-child:after {
+  display: none;
+}
+
+.article-title {
+  margin-bottom: 15px;
+}
+
+.article-imgwrap {
+  margin-bottom: 30px;
+}
+
+.article-imgwrap::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.article-imgbox {
+  background: center no-repeat / cover;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border: 1px solid #707070;
+}
+
+.article-imgbox_full {
+  height: 300px;
+  width: 100%;
+}
+
+.article-imgbox_third {
+  float: left;
+  width: -webkit-calc(33.33333% - 10px);
+  width: calc(33.33333% - 10px);
+  height: 210px;
+  margin-right: 15px;
+}
+
+.article-imgbox_third:last-child {
+  margin-right: 0;
+}
+
+.article-imgbox_half {
+  float: left;
+  width: -webkit-calc(50% - 7.5px);
+  width: calc(50% - 7.5px);
+  height: 230px;
+  margin-right: 15px;
+}
+
+.article-imgbox_half:last-child {
+  margin-right: 0;
+}
+
+.article-blockquote {
+  position: relative;
+  padding: 15px;
+  padding-left: 72px;
+  margin-bottom: 15px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #eeefef;
+  color: #5e6167;
+  font-family: "PT Serif";
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+.article-blockquote:before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 15px;
+  left: 15px;
+  width: 27px;
+  height: 26px;
+  background: url(../img/icon/quote.svg) center no-repeat/contain;
+}
+
+.article-text {
+  color: #5e6167;
+  font-family: "PT Serif";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+.article-text p {
+  font-size: 1.0625em;
+  /* 17/16 */
+  margin-bottom: 15px;
+}
+
+.article-text h3 {
+  margin-bottom: 18px;
+  font-size: 1.375em;
+}
+
+.article-autor {
+  margin-top: 34px;
+  text-align: right;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #fbfbfb;
+  color: #5e6167;
+  font-family: "PT Serif";
+  font-size: 17px;
+  font-weight: 400;
 }
 
 @media screen and (min-width: 1024px) {
@@ -3310,12 +3635,12 @@ h2 span,
     text-decoration: underline;
   }
 
-  .calendar .ui-state-default:hover {
+  .vidget-calendar .ui-state-default:hover {
     background-color: #BCBDC0;
     color: #ffffff;
   }
 
-  .calendar .ui-datepicker-buttonpane button:hover {
+  .vidget-calendar .ui-datepicker-buttonpane button:hover {
     background-color: #BCBDC0;
     color: #ffffff;
   }
