--- a/sass/_menu-left.scss
+++ b/sass/_menu-left.scss
@@ -1,9 +1,14 @@
 .menu-left {
 	position: absolute;
 	width: calc(100% - 30px);
+	padding-bottom: 15px;
 	z-index: 10;
 	border-radius: 5px;
-	background-color: #f4f5f5;
+	background-color: #fff;
+	&-wrap {
+		background-color: #f4f5f5;
+
+	}
 	&-navigation {
 		padding-top: 15px;
 	}
