--- a/css/style.css
+++ b/css/style.css
@@ -906,6 +906,10 @@ h2 span,
   z-index: 110000;
 }
 
+.tooltip-inner p {
+  text-align: left;
+}
+
 .link {
   display: inline-block;
   color: #797c82;
@@ -2397,6 +2401,7 @@ h2 span,
 
 .content-titlebox {
   float: left;
+  color: #5e6167;
 }
 
 .content-titlebox h1,
@@ -2410,9 +2415,51 @@ h2 span,
   margin: 0;
   padding: 0;
   font-family: "PT Serif", serif;
-  color: #5e6167;
+  color: inherit;
   font-weight: 400;
   font-size: 32px;
+}
+
+.content-titlebox_specialtitle h1,
+.content-titlebox_specialtitle h2,
+.content-titlebox_specialtitle h3,
+.content-titlebox_specialtitle h4,
+.content-titlebox_specialtitle h5,
+.content-titlebox_specialtitle p,
+.content-titlebox_specialtitle div,
+.content-titlebox_specialtitle span {
+  margin-top: 15px;
+  margin-bottom: 25px;
+  font-family: Roboto;
+  font-weight: 700;
+}
+
+.content-titlebox_dark {
+  padding: 6px 15px 4px;
+  margin-bottom: 15px;
+  color: #ffffff;
+  width: 100%;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #797c82;
+  font-size: 16px;
+}
+
+.content-titlebox_dark h1,
+.content-titlebox_dark h2,
+.content-titlebox_dark h3,
+.content-titlebox_dark h4,
+.content-titlebox_dark h5,
+.content-titlebox_dark p,
+.content-titlebox_dark div,
+.content-titlebox_dark span {
+  color: inherit;
+  font-family: Roboto;
+}
+
+.content-titlebox_dark h4 {
+  font-weight: 400;
+  font-size: 1.375em;
 }
 
 .content-subtitle {
@@ -2581,6 +2628,16 @@ h2 span,
   color: #ffffff;
 }
 
+.cards {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
 .card {
   padding: 0 15px;
   width: 100%;
@@ -2677,6 +2734,39 @@ h2 span,
      text-overflow: ellipsis;
 }
 
+.card__text {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  color: #5e6167;
+  font-family: "PT Serif";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+.card__text p {
+  font-size: 1.0625em;
+  margin-bottom: 15px;
+}
+
+.card__text p:last-child {
+  margin-bottom: 0;
+}
+
+.card__text h3 {
+  margin-bottom: 18px;
+  font-size: 1.375em;
+}
+
 .card-date {
   margin-top: auto;
   color: #a1a3a7;
@@ -2686,6 +2776,15 @@ h2 span,
 
 .card-date_light {
   color: #ffffff;
+}
+
+.card__more {
+  display: none;
+  margin-left: auto;
+  margin-top: auto;
+  padding-left: 44px;
+  padding-right: 44px;
+  font-family: Roboto;
 }
 
 .cardFull {
@@ -2699,6 +2798,10 @@ h2 span,
 .cardFull-head {
   background-color: #fff;
   margin-bottom: 0;
+}
+
+.cardFull-head_special {
+  margin-bottom: 15px;
 }
 
 .cardFull__imgbox {
@@ -2791,6 +2894,11 @@ h2 span,
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
+.cardHalf__text {
+  padding-top: 15px;
+  max-height: 305px;
+}
+
 .cardTwoThirds {
   width: 66.666667%;
   -webkit-box-flex: 0;
@@ -2817,12 +2925,17 @@ h2 span,
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
+.cardTwoThirds__text {
+  max-height: 210px;
+}
+
 .vidget-calendar {
   padding: 15px;
   margin-top: 25px;
   -webkit-border-radius: 5px;
           border-radius: 5px;
   background-color: #f4f5f5;
+  height: 238px;
 }
 
 .vidget-calendar.vidget-box {
@@ -2837,6 +2950,8 @@ h2 span,
 
 .vidget-calendar.vidget-box .ui-datepicker {
   display: block;
+  padding: 0;
+  margin-left: -2px;
 }
 
 .vidget-calendar .ui-datepicker {
@@ -2845,6 +2960,7 @@ h2 span,
 
 .vidget-calendar table {
   font-size: 14px;
+  margin-bottom: 0;
 }
 
 .vidget-calendar .ui-datepicker-title {
@@ -2946,10 +3062,21 @@ h2 span,
 
 .events {
   display: none;
+  height: 155px;
+  margin-top: -5px;
 }
 
 .event {
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
 }
 
 .event-nav {
@@ -3075,10 +3202,17 @@ h2 span,
 .vidget-imgbox {
   position: relative;
   overflow: hidden;
-  min-height: 125px;
+  background: center no-repeat / cover;
+}
+
+.vidget-imgbox_calendar {
+  margin-top: auto;
+  height: 100%;
+  max-height: 115px;
 }
 
 .vidget-imgbox_full {
+  height: 180px;
   margin-bottom: 10px;
 }
 
@@ -3354,10 +3488,6 @@ h2 span,
   font-size: 12px;
   font-weight: 300;
   color: inherit;
-}
-
-.calendar__day_special {
-  background-color: rgba(0, 185, 31, 0.1);
 }
 
 .calendar__day_major {
@@ -3643,6 +3773,10 @@ h2 span,
   .vidget-calendar .ui-datepicker-buttonpane button:hover {
     background-color: #BCBDC0;
     color: #ffffff;
+  }
+
+  .calendar__day:hover {
+    background-color: rgba(0, 185, 31, 0.1);
   }
 }
 
