--- a/sass/_calendar.scss
+++ b/sass/_calendar.scss
@@ -65,8 +65,12 @@
 		}
 	}
 	&__day {
-		&_special {
+		@include hover {
 			background-color: rgba(0, 185, 31, 0.1);			
+			
+		}
+		&_special {
+			
 		}
 		&_major {
 			color: $special-color;
