--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1,3 +1,7 @@
+.cards {
+	display: flex;
+	flex-wrap: wrap;
+}
 .card {
 	padding: 0 15px;
 	width: 100%;
@@ -59,6 +63,28 @@
 			}
 		}
 	}
+	&__text {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		color: $basic-color;
+		font-family: "PT Serif";
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 23px;
+		p {
+			font-size: 1.0625em;
+			margin-bottom: 15px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		h3 {
+			margin-bottom: 18px;
+			font-size: 1.375em;
+		}
+	}
 	&-date {
 		margin-top: auto;
 		color: $thin-color;
@@ -68,6 +94,15 @@
 			color: $light-color;
 		}
 	}
+	&__more {
+		display: none;
+		// visibility: hidden;
+		margin-left: auto;
+		margin-top: auto;
+		padding-left: 44px;
+		padding-right: 44px;
+		font-family: Roboto;
+	}
 
 
 	&Full {
@@ -76,6 +111,9 @@
 		&-head {
 			background-color: #fff;
 			margin-bottom: 0;
+			&_special {
+				margin-bottom: 15px;
+			}
 		}
 		&__imgbox {
 			min-height: 395px;
@@ -144,6 +182,10 @@
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 			}
 		}
+		&__text {
+			padding-top: 15px;
+			max-height: 305px;
+		}
 	}
 	&TwoThirds {
 		width: 66.666667%;
@@ -160,6 +202,9 @@
 				background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.14) 14%,rgba(0,0,0,1) 100%); 
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 			}
+		}
+		&__text {
+			max-height: 210px;
 		}
 	}
 }
