--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1,6 +1,8 @@
 .cards {
 	display: flex;
 	flex-wrap: wrap;
+	width: 100%;
+	@include clearfix;
 }
 .card {
 	padding: 0 15px;
@@ -68,7 +70,6 @@
 		display: flex;
 		flex-direction: column;
 		height: 100%;
-		color: $basic-color;
 		font-family: "PT Serif";
 		font-size: 16px;
 		font-weight: 400;
