--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -86,6 +86,7 @@
 		text-align: right;
 		font-size: 32px;
 		line-height: 1.4em;
+		overflow: hidden;
 		&__btnbox {
 			vertical-align: middle;
 		}
@@ -155,6 +156,9 @@
 	&-card {
 		text-align: right;
 		
+	}
+	&-count {
+		margin-left: 5px;
 	}
 	&-button {
 		margin-left: 5px;
