--- a/pug/articles/_article-03.pug
+++ b/pug/articles/_article-03.pug
@@ -16,8 +16,8 @@ article(id=ID).article
       p
         | «Основной итог десятилетней работы ЛПК - возможность производить трубные марки стали самого ответственного назначения в самые короткие сроки. Сегодня по производственным показателям ЛПК является лучшим среди предприятий аналогичного класса в мире. Мы не стоим на месте, планируем увеличить объем производства на 20%, до 1,5 млн тонн проката в год, осваиваем новые марки стали, которые востребованы отечественной топливно-энергетической отраслью», - отметил председатель Совета директоров ОМК Анатолий Седых.
     .article-imgwrap
-      .article-imgbox.article-imgbox_half(style='background-image: url(../img/article-img-02.jpg)')
-      .article-imgbox.article-imgbox_half(style='background-image: url(../img/article-img-04.jpg)')
+      .article-imgbox.article-imgbox_half(style='background-image: url(img/article-img-02.jpg)')
+      .article-imgbox.article-imgbox_half(style='background-image: url(img/article-img-04.jpg)')
     .article-text
       h3 СПРАВКА
       p
