--- a/pug/cards/_card-calendar.pug
+++ b/pug/cards/_card-calendar.pug
@@ -87,7 +87,7 @@
 					td.calendar__day
 						div
 							p 23              
-					td.calendar__day.calendar__weekend
+					td.calendar__day.calendar__weekend(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День поедателей йогуртов</p>')
 						a(href='calendar3.html#events-24-10-2018')
 							p 24
 							span.calendar__caption 1 событие
