--- a/pug/cards/_card-calendar.pug
+++ b/pug/cards/_card-calendar.pug
@@ -64,7 +64,7 @@
 					<p>День металлурга 2</p>')
 						a(href='calendar2.html#events-14-10-2018')
 							p 14
-							span.calendar__caption 3 событие
+							span.calendar__caption 3 события
 					td.calendar__day.calendar__day_special
 						p 15
 					td.calendar__day
