--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -31,7 +31,7 @@
 		&_specialtitle {
 			h1, h2, h3, h4, h5, p, div, span {
 				margin-top: 15px;
-				margin-bottom: 25px;
+				// margin-bottom: 25px;
 				font-family: Roboto;
 				font-weight: 700;
 			}
