--- a/pug/blocks.pug
+++ b/pug/blocks.pug
@@ -1,4 +1,6 @@
 extends modules/_base
+block vars
+	-var pageTitle = 'Комбинированные блоки';
 block content
 	- var pageTitle = 'Комбинированные блоки';
 	include page/_page-special-title
