--- a/pug/blocks/_block-min-imgl-text.pug
+++ b/pug/blocks/_block-min-imgl-text.pug
@@ -8,14 +8,47 @@
 			.content-titlebox
 				h2 Благодарность всем сотрудникам подразделения
 	.card.cardFull-head_special
-		.tagbox
-			.tag
-				.card-date
-					span 24 Сентября 2018
-			.like-card
-				button.like-button.comment-button
-					i.icon-comment
-					span.like-count 23
-				button.like-button
-					i.icon-like
-					span.like-count 1286
+		.tag
+			.card-date
+				span 24 Сентября 2018
+		.like-card
+			button.like-button.comment-button
+				i.icon-comment
+				span.like-count 23
+			button.like-button
+				i.icon-like
+				span.like-count 1286
+
+	.card.cardMin
+		.cardMin__imgbox.card__imgbox(style='background-image: url(img/block-img-01.jpg);')
+			.card-warning-text.hide
+				p
+	.card.cardMinOther
+		.card__text.cardMinOther__text
+			p
+				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
+			p
+				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
+			a.button.card__more(href='#') Читать далее
+
+	.card.cardMin
+		.cardMin__imgbox.card__imgbox(style='background-image: url(img/block-img-09.jpg);')
+			.card-warning-text.hide
+				p
+	.card.cardMinOther
+		.card__text.cardMinOther__text
+			p
+				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
+			p
+				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
+			a.button.card__more(href='#') Читать далее
+
+	.card.cardMin
+		.cardMin__imgbox.card__imgbox(style='background-image: url(img/block-img-04.jpg);')
+			.card-warning-text.hide
+				p
+	.card.cardMinOther
+		.card__text.cardMinOther__text
+			p
+				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
+			a.button.card__more(href='#') Читать далее
