--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -1,4 +1,6 @@
+block vars
 - var version = '?0.1.3';
+- var pageTitle;
 doctype html
 html(lang='ru')
 	head
@@ -11,7 +13,10 @@ html(lang='ru')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.structure.min.css')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.min.css')
 		link(href='css/style.css'+version, rel='stylesheet')
-		title ОМК
+		if pageTitle !== undefined
+			title=pageTitle+' | ОМК'
+		else 
+			title='ОМК'
 	body
 		include _header
 		section.content.section
