--- a/pug/articles/_article-03.pug
+++ b/pug/articles/_article-03.pug
@@ -4,7 +4,7 @@ article(id=ID).article
       .article-title.content-titlebox
         h3 День металлурга 2
     .article-imgwrap
-      .article-imgbox.article-imgbox_full(style='background-image: url(img/article-img-01.jpg);')
+      .article-imgbox.article-imgbox_full(style='background-image: url(img/news-twothirds-img-01.jpg);')
     .article-quote
       blockquote.article-blockquote
         | «Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.
