--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -6,8 +6,7 @@
 }
 .card {
 	padding: 0 15px;
-	max-width: 100%;
-	flex-grow: 1;
+	width: 100%;
 	margin-bottom: 30px;
 	@include clearfix;
 	&-wrap {
