--- a/pug/blocks.pug
+++ b/pug/blocks.pug
@@ -12,3 +12,9 @@ block content
 	include blocks/_block-imgt-textb
 	
 	include blocks/_block-min-imgl-text
+	
+	include blocks/_block-article-only-text
+
+	include blocks/_block-logos
+	
+	include blocks/_block-blog
