--- a/pug/blocks/_block-article-only-text.pug
+++ b/pug/blocks/_block-article-only-text.pug
@@ -1,10 +1,23 @@
-article(id=ID).article
+// Текст
+article(id=ID).article.cards
+	.card.cardFull-head_special
+		.content-title
+			.content-titlebox_dark
+				h4 Текст
+		.tag
+			.card-date.card-date_big
+				span 24 Сентября 2018
+		.like-card
+			button.like-button.comment-button
+				i.icon-comment
+				span.like-count 23
+			button.like-button
+				i.icon-like
+				span.like-count 1286
 	.card
 		.content-title
 			.article-title.content-titlebox
-				h3 День металлурга
-		.article-imgwrap
-			.article-imgbox.article-imgbox_full(style='background-image: url(img/news-twothirds-img-01.jpg);')
+				h2 Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы
 		.article-quote
 			blockquote.article-blockquote
 				| «Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.
@@ -15,10 +28,6 @@ article(id=ID).article
 				| «Выксунский металлургический завод – не только один из крупнейших налогоплательщиков Нижегородской области, это еще яркий пример корпоративной социальной ответственности. Коллеги из ОМК показывают пример как необходимо взаимодействовать с местным самоуправлением, с региональными властями для того, чтобы жизнь выксунцев стала лучше. У компании много новых проектов развития производства в Выксе, вся необходимая поддержка от правительства области будет оказана», - сказал исполняющий обязанности заместителя губернатора, заместителя председателя Правительства Нижегородской области Игорь Носов.
 			p
 				| «Основной итог десятилетней работы ЛПК - возможность производить трубные марки стали самого ответственного назначения в самые короткие сроки. Сегодня по производственным показателям ЛПК является лучшим среди предприятий аналогичного класса в мире. Мы не стоим на месте, планируем увеличить объем производства на 20%, до 1,5 млн тонн проката в год, осваиваем новые марки стали, которые востребованы отечественной топливно-энергетической отраслью», - отметил председатель Совета директоров ОМК Анатолий Седых.
-		.article-imgwrap
-			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-02.jpg)')
-			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-03.jpg)')
-			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-04.jpg)')
 		.article-text
 			h3 СПРАВКА
 			p
