--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -12,6 +12,9 @@ html(lang='ru')
 		link(rel='stylesheet', href='css/bootstrap/bootstrap-grid.css')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.structure.min.css')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.min.css')
+		link(rel='stylesheet', href='slick/slick-theme.css')
+		link(rel='stylesheet', href='slick/slick.css')
+
 		link(href='css/style.css'+version, rel='stylesheet')
 		if pageTitle !== undefined
 			title=pageTitle+' | ОМК'
@@ -48,6 +51,8 @@ html(lang='ru')
 			script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
 			script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
 			script(src='js/libs/jquery.dotdotdot.js')
+			// slick
+			script(src='slick/slick.min.js')
 			// Bootstrap
 			script(src='js/libs/bootstrap/bootstrap.bundle.min.js')
 			script(src='js/libs/jquery.actual.min.js')
