--- a/css/style.css
+++ b/css/style.css
@@ -911,6 +911,12 @@ h2 span,
   text-align: left;
 }
 
+.hashtag {
+  float: left;
+  color: #a5a6aa;
+  margin-left: 10px;
+}
+
 .link {
   display: inline-block;
   color: #797c82;
@@ -2789,6 +2795,10 @@ h2 span,
   color: #ffffff;
 }
 
+.card-date_big {
+  font-size: 15px;
+}
+
 .card__more {
   display: none;
   margin-left: auto;
@@ -2796,6 +2806,41 @@ h2 span,
   padding-left: 44px;
   padding-right: 44px;
   font-family: Roboto;
+}
+
+.card-logos::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.card-logo {
+  float: left;
+  margin-bottom: 15px;
+  padding-right: 15px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.card-logo:nth-child(5n) {
+  padding-right: 0;
+}
+
+.card-logo__imgbox {
+  display: inline-block;
+  width: 155px;
+  height: 120px;
+  line-height: 90px;
+  vertical-align: middle;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border: 1px solid #dddee0;
+  padding: 15px;
+  text-align: center;
+}
+
+.card-logo__imgbox img {
+  vertical-align: middle;
 }
 
 .cardFull {
@@ -3687,13 +3732,14 @@ h2 span,
   clear: both;
 }
 
-.article .hashtag {
-  float: left;
-}
-
 @media screen and (min-width: 1024px) {
   .breadcrumb__link:hover {
     color: #6e7075;
+  }
+
+  .hashtag:hover {
+    color: #5e6167;
+    text-decoration: underline;
   }
 
   .link:hover {
@@ -3809,6 +3855,11 @@ h2 span,
 
   .card__title a:hover {
     text-decoration: underline;
+  }
+
+  .card-logo__imgbox:hover {
+    border: 2px solid #a1a3a7;
+    padding: 14px;
   }
 
   .vidget-calendar .ui-state-default:hover {
