--- a/pug/articles/_article-03.pug
+++ b/pug/articles/_article-03.pug
@@ -24,4 +24,6 @@ article(id=ID).article
         | Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.
       p Сегодня в комплексе работает около 1200 сотрудников.
     .article-autor
+      each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
+        a.hashtag(href='#')= item
       p Автор статьи: Елена Мацинова
