--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -4,7 +4,7 @@ a:hover,
 a:focus,
 a:active,
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 button,
@@ -15,71 +15,71 @@ select:focus,
 input:focus,
 a:focus
 textarea:focus {
-  outline: none;
+	outline: none;
 }
 a {
-  color: inherit;
+	color: inherit;
 }
 a,
 button,
 label, {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 a,
 button,
 label,
 input {
-  background-color: transparent;
-  border: none;
+	background-color: transparent;
+	border: none;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  // font-family: 'Gotham Pro', Arial, sans-serif;
-  // transition: 0.5s;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	// font-family: 'Gotham Pro', Arial, sans-serif;
+	// transition: 0.5s;
 }
 
 body {
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  color: $text-color;
-  font-weight: 400;
-  overflow-x: hidden;
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	color: $text-color;
+	font-weight: 400;
+	overflow-x: hidden;
 }
 
 .bos {
-  border-radius: 5px;
+	border-radius: 5px;
 }
 .boxs {
-  margin-bottom: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
-  width: 100%;
-  height: 400px;
-  border-radius: 5px;
-  background-color: #B6B6B6;
-  &:nth-child(3n) {
-    background-color: #eee;
-    height: 250px;
-  }
-  &:nth-child(2n) {
-    background-color: #4C4C4C;
-    height: 600px;
-  }
-  &:nth-child(5n) {
-    background-color: #EAEAEA;
-  }
+	margin-bottom: 30px;
+	margin-left: 15px;
+	margin-right: 15px;
+	width: 100%;
+	height: 400px;
+	border-radius: 5px;
+	background-color: #B6B6B6;
+	&:nth-child(3n) {
+		background-color: #eee;
+		height: 250px;
+	}
+	&:nth-child(2n) {
+		background-color: #4C4C4C;
+		height: 600px;
+	}
+	&:nth-child(5n) {
+		background-color: #EAEAEA;
+	}
 }
 
 img{
-  max-width: 100%;
+	max-width: 100%;
 }
 
 *.hide {
-  display: none;
+	display: none;
 }
 
 
@@ -92,148 +92,157 @@ h5, .h5,
 h6, .h6,
 .section-title, 
 .title, {
-  margin: 0;
-  padding: 0;
-  font-family: "PT Serif", serif;
-  // color: $basic-color;
-  color: inherit;
-  font-weight: 400;
+	margin: 0;
+	padding: 0;
+	font-family: "PT Serif", serif;
+	// color: $basic-color;
+	color: inherit;
+	font-weight: 400;
 }
 .sign-title {
-  padding: 3px 10px;
-  border-radius: 5px;
-  background-color: #dddee0;
-  color: #000000;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
+	padding: 3px 10px;
+	border-radius: 5px;
+	background-color: #dddee0;
+	color: #000000;
+	font-family: Roboto;
+	font-size: 16px;
+	font-weight: 400;
 }
 
 p, .section-text, .text {
-  color: inherit;
-  // color: $text-color;
-  &.text-dark {
-    // color: $text-dark-color;
-  }
+	color: inherit;
+	// color: $text-color;
+	&.text-dark {
+		// color: $text-dark-color;
+	}
 }
 
 
 h2, .section-title {
-  @include sm-block() {
+	@include sm-block() {
 
-  }
+	}
 
 
-  &:after {
+	&:after {
 
-  }
+	}
 
-  span {
-    color: $title-special-color;
-    @include sm-block() {
-    }
-  }
+	span {
+		color: $title-special-color;
+		@include sm-block() {
+		}
+	}
 }
 
 
 section, .section {
-  @include sm-block() {
-    
-  }
+	@include sm-block() {
+		
+	}
 }
 
 .section_special-bg {
-  &:before, &:after {
-  }
-  &:after {
-  }
+	&:before, &:after {
+	}
+	&:after {
+	}
 }
 
 .section-dark {
-  background-color: #000;
-  color: $light-color;
+	background-color: #000;
+	color: $light-color;
 
 
-  h2, h1, .section-title, p {
-  }
+	h2, h1, .section-title, p {
+	}
 
 
-  .section-title {
-    span {
-    }
-  }
+	.section-title {
+		span {
+		}
+	}
 }
 
 .overlay {
-  // display: none;
-  position: fixed;
-  z-index: 11;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.1;
+	// display: none;
+	position: fixed;
+	z-index: 11;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.1;
 }
 .breadcrumb {
-  padding: 15px 0 15px;
-  @include clearfix;
-  &-group {
-    float: left;
-  }
-  &__link {
-    color: #bcbdc0;
-    font-size: 12px;
-    font-weight: 300;
-    transition: color 0.4s ease-out;
-    @include hover {
-      color: darken(#bcbdc0, 30);
-    }
-    &:after {
-      content: ' / ';
-      display: inline;
-    }
-    &:last-child {
-      &:after {
-        display: none;
-      }
-    }
-  }
+	padding: 15px 0 15px;
+	@include clearfix;
+	&-group {
+		float: left;
+	}
+	&__link {
+		color: #bcbdc0;
+		font-size: 12px;
+		font-weight: 300;
+		transition: color 0.4s ease-out;
+		@include hover {
+			color: darken(#bcbdc0, 30);
+		}
+		&:after {
+			content: ' / ';
+			display: inline;
+		}
+		&:last-child {
+			&:after {
+				display: none;
+			}
+		}
+	}
 
-  &-back {
-    text-align: right;
-  }
+	&-back {
+		text-align: right;
+	}
 }
 .extra-wrapper {
-  position: fixed;
-  z-index: 10000;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
-  .header, .header.scroll {
-    position: absolute;
-    z-index: 1000;
-    top: 0;
-    left: 0;
-    // height: 800px;
-    // overflow-y: scroll;
-    transform: none;
-  }
+	position: fixed;
+	z-index: 10000;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	overflow-y: scroll;
+	.header, .header.scroll {
+		position: absolute;
+		z-index: 1000;
+		top: 0;
+		left: 0;
+		// height: 800px;
+		// overflow-y: scroll;
+		transform: none;
+	}
 }
 .wrapper {
 
 }
 *.fixed {
-  position: fixed;
+	position: fixed;
 }
 .tooltip {
-  z-index: 110000;
+	z-index: 110000;
 }
 .tooltip-inner {
-  p {
-    text-align: left;
-    
-  }
+	p {
+		text-align: left;
+		
+	}
+}
+.hashtag {
+	float: left;
+	color: #a5a6aa;
+	margin-left: 10px;
+	@include hover {
+		color: $basic-color;
+		text-decoration: underline;
+	}
 }
