--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -26,7 +26,8 @@ html(lang='ru')
 			.container
 				.row
 					.col-xl-3
-						include _aside
+						.aside-wrap#aside
+							include _aside
 					.col-xl-9
 						.content-group
 							//- block vars
