--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -2,8 +2,7 @@
 	position: fixed;
 	z-index: 100;
 	padding-top: 15px;
-	// padding-bottom: 0px;
-	// padding-bottom: 15px;
+	padding-bottom: 0;
 	background-color: #fff;
 	transform: translateZ(0);
 	opacity: 1;
