--- a/css/style.css
+++ b/css/style.css
@@ -745,36 +745,6 @@ body {
   overflow-x: hidden;
 }
 
-.bos {
-  -webkit-border-radius: 5px;
-          border-radius: 5px;
-}
-
-.boxs {
-  margin-bottom: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
-  width: 100%;
-  height: 400px;
-  -webkit-border-radius: 5px;
-          border-radius: 5px;
-  background-color: #B6B6B6;
-}
-
-.boxs:nth-child(3n) {
-  background-color: #eee;
-  height: 250px;
-}
-
-.boxs:nth-child(2n) {
-  background-color: #4C4C4C;
-  height: 600px;
-}
-
-.boxs:nth-child(5n) {
-  background-color: #EAEAEA;
-}
-
 img {
   max-width: 100%;
 }
@@ -1332,6 +1302,7 @@ h2 span,
   position: fixed;
   z-index: 100;
   padding-top: 15px;
+  padding-bottom: 0;
   background-color: #fff;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -1562,6 +1533,7 @@ h2 span,
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   background-color: #fff;
+  padding-bottom: 15px;
 }
 
 .header:before {
@@ -2377,7 +2349,6 @@ h2 span,
 }
 
 .content {
-  padding-top: 15px;
   height: 100%;
   min-height: 3500px;
 }
