--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -42,6 +42,7 @@
 	width: 100%;
 	transform: translateZ(0);
 	background-color: #fff;
+	padding-bottom: 15px;
 	@include before {
 		top: 10px;
 		bottom: 9px;
